# ansible-role-rtx

./: .ansible-lint  .ansible-lint-ignore  .envrc  .gitignore  .rtx.toml  .tool-versions  README-zh_CN.md  README.md  ansible.cfg  justfile  lefthook.yml  pyproject.toml  upload.sh
.github/workflows/: golang.yml  molecule.yml  nodejs.yml  python.yml
defaults/: main.yml
docs/: dev.txt  mapping.md  readme.txt
handlers/: main.yml
meta/: .galaxy_install_info  main.yml
molecule/default/: converge.yml  molecule.yml  verify.yml
molecule/erlang/: converge.yml  molecule.yml  verify.yml
molecule/golang/: converge.yml  verify.yml
molecule/nodejs/: converge.yml  molecule.yml  verify.yml
molecule/python/: converge.yml  molecule.yml  verify.yml
tasks/: install-plugin-global-dependencies.yml  install-plugin-specific-dependencies.yml  install-plugins-and-apps.yml  install-rtx-system-wide.yml  install-rtx-user-wide.yml  install-rtx.yml  install-system-wide.yml  install-user-wide.yml  install.yml  main.yml  plugins.yml  set-facts.yml  update-package-cache.yml
tasks/plugins/: elixir.yml  erlang.yml  golang.yml  nodejs.yml  php.yml  plugin.yml  python.yml  ruby.yml
templates/: rtx.sh.j2
tests/: readme.txt  test.yml
vars/: RedHat.yml  elixir.yml  erlang.yml  golang.yml  main.yml  nodejs-centos-8.yml  nodejs.yml  php.yml  python-amazon-2.yml  python.yml  ruby.yml
vars/global/: debian.yml  redhat.yml  rocky-9.yml  ubuntu.yml
